Implement Serilog and Sentry support

--- a/src/Prospa.AuthService.API/appsettings.json
+++ b/src/Prospa.AuthService.API/appsettings.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Sentry": {
+    "Dsn": "https://ee42d146840f5cb43312bd334891cc30@o402352.ingest.sentry.io/4506851581952000"
+  },
 
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Port=3306;Database=prospa_db;User Id=root;Password=password@1;SslMode=none;AllowPublicKeyRetrieval=True;"
@@ -19,12 +22,12 @@
     "ProspaLoginAPIUrl": "https://api-staging.getprospa.com/api/v1/account/prospa_login/"
   },
 
-  "JWTSettings": {    
+  "JWTSettings": {
     "JWTAccessTokenExpiry": "5",
     "JWTRefreshTokenExpiry": "10",
     "JWTIssuer": "prospa",
     "JWTAudience": "prospa_client",
-    "AccessTokenExpireTime": "15"    
+    "AccessTokenExpireTime": "15"
   },
 
   "RedisConnection": {
