commit update to appsettings

--- a/src/AuthService.API/appsettings.json
+++ b/src/AuthService.API/appsettings.json
@@ -25,8 +25,8 @@
   "JWTSettings": {
     "JWTAccessTokenExpiry": "5",
     "JWTRefreshTokenExpiry": "10",
-    "JWTIssuer": "prospa",
-    "JWTAudience": "prospa_client",
+    "JWTIssuer": "auth-server",
+    "JWTAudience": "auth-client",
     "AccessTokenExpireTime": "15"
   },
 
